syntax = "proto3";
package ccnp_server_pb;

message HealthCheckRequest {
  string service = 1;
}

message HealthCheckResponse {
  enum ServingStatus {
    UNKNOWN = 0;
    SERVING = 1;
    NOT_SERVING = 2;
    SERVICE_UNKNOWN = 3;
  }
  ServingStatus status = 1;
}

service ccnp {
    rpc GetReport (GetReportRequest) returns (GetReportResponse);
    rpc GetMeasurement (GetMeasurementRequest) returns (GetMeasurementResponse) {}
    rpc GetEventlog (GetEventlogRequest) returns (GetEventlogResponse) {}
}

message GetReportRequest {
    string user_data = 1;
    string nonce = 2;
}

message GetReportResponse {
    bytes report = 1;
}

message GetMeasurementRequest {
    uint32 index = 1;
    uint32 algo_id = 2;
}

message GetMeasurementResponse {
    bytes measurement = 1;
}

message GetEventlogRequest {
    uint32 start = 1;
    uint32 count = 2;
}

message TcgDigest {
    uint32  algo_id = 1;
    bytes   hash = 2;
}

message TcgEvent {
    uint32  imr_index = 1;
    uint32  event_type = 2;
    uint32  event_size = 4;
    bytes   event = 5;
    bytes   digest = 3;
    repeated TcgDigest digests = 6;
}

message GetEventlogResponse {
    repeated TcgEvent events = 1;
}



